--- a/employeeSkillsTrackingApplication.ipynb
+++ b/employeeSkillsTrackingApplication.ipynb
@@ -63,22 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-05039d106987>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0memployee_list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mcreate_employee\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-3-05039d106987>\u001b[0m in \u001b[0;36mcreate_employee\u001b[1;34m(user_id)\u001b[0m\n\u001b[0;32m     13\u001b[0m          ValueError: User ID already exists, create a new ID'''\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0muser_id\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0memployee_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m                       \u001b[1;31m# error not generated\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid User ID, please enter valid User ID.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "add_employee = False\n",
     "employee_list = []\n",
@@ -108,21 +95,12 @@
     "                              \"last name\": l_name, \n",
     "                              \"department\": dept, \n",
     "                              \"skills\": skills})\n",
-    "        proceed = input(\"would you like to add another employee? (Y/N)\")\n",
+    "        proceed = input(\"Would you like to add another employee? (Y/N)\")\n",
     "        if proceed == \"N\":\n",
     "            break;\n",
     "    return employee_list\n",
     "\n",
     "create_employee()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(employee_list)"
    ]
   },
   {
@@ -146,7 +124,7 @@
     "        \n",
     "        employee_list.append({\"skills\": new_skills})\n",
     "        \n",
-    "        proceed = input(\"Would you like to edit another employee? (Y/N)\")\n",
+    "        proceed = input(\"Would you like to edit the skills of another employee? (Y/N)\")\n",
     "        if proceed == \"N\":\n",
     "            break;\n",
     "            \n",
